# todo-web-app-phase-3

./: .gitignore  CLAUDE.md  Project_Code_Summary.txt  TASK_UPDATE_GUIDE.md  check_backend.py  package-lock.json  run_instructions.txt  simple_test.py  test_fixes.py  test_uuid_fix.py  update_task_helper.py
.claude/agents/: authentication-subagent.md  bcakend-subagent.md  chat-endpoint-subagent.md  chatbot-models-subagent.md  chatkit-ui-subagent.md  conversation-db-subagent.md  database-subagent.md  deployment-setup-subagent.md  frontend-subagent.md  mcp-tools-subagent.md  openai-agents-subagent.md  security-subagent.md  task-management-subagent.md  testing-validation-subagent.md
.claude/skills/agents-workflow/: skills.md
.claude/skills/mcp-task-tools/: skills.md
.specify/memory/: constitution.md
backend/: data_test.py  db_test.py  main.py  pyproject.toml  requirements.txt  test_mcp_tools.py  todo.db
backend/alembic/: env.py
backend/alembic/versions/: 17e8115a0cf0_update_task_model_to_use_integer_id_and_.py
backend/src/: __init__.py  auth.py  database.py  models.py  security.py
backend/src/agent/: runner.py
backend/src/mcp/: server.py
backend/src/routers/: auth.py  chat.py  tasks.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
specs/001-ai-chatbot-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-monorepo-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+51 files in other folders)
